--- a/ChatManager/Localization/en.json
+++ b/ChatManager/Localization/en.json
@@ -46,6 +46,7 @@
   "btnSystem": "System feedback",
   "btnGuildInfo": "Guild info",
   "btnGroupInfo": "Group info",
+  "btnResetColors": "Reset Colors",
   "lblServerName": "Current server:",
   "lblCharName": "Current character:",
 
@@ -122,6 +123,7 @@
   "Err_NoExportFileSelected": "Please select at least one entry from the list!",
   "Error_IsDetected": "Something went wrong!\nDo you want to report the bug?",
   "Inf_AutosaveImport": "Import of character CHARNAME of server SERVERNAME was sucessful!\nLast edited: TIMESTAMP",
+  "Inf_ColorsReset": "The chat colors were successfully reset!",
   "Inf_ExportedFiles": "FILECOUNT file(s) have been edited.",
   "Inf_NoFilesInBackupDir": "There are no files in the backup directory!",
   "Inf_RestartRequired": "The application must be restarted after this change!",
