--- a/ChatManager/Localization/fr.json
+++ b/ChatManager/Localization/fr.json
@@ -46,6 +46,7 @@
   "btnSystem": "Rétroaction sur le système",
   "btnGuildInfo": "Guilde Info",
   "btnGroupInfo": "Groupe Info",
+  "btnResetColors": "Réinitialiser les couleurs",
   "lblServerName": "Serveur actuel:",
   "lblCharName": "Caractère actuel:",
 
@@ -122,6 +123,7 @@
   "Err_NoExportFileSelected": "Choisis au moins une entrée dans la liste!",
   "Error_IsDetected": "Quelque chose a mal tourné!\nVeux-tu signaler le bogue?",
   "Inf_AutosaveImport": "L'importation du caractère CHARNAME du serveur SERVERNAME a réussi!\nDernière modification: TIMESTAMP",
+  "Inf_ColorsReset": "Les couleurs du chat ont été réinitialisées avec succès!",
   "Inf_ExportedFiles": "FILECOUNT le(s) fichier(s) a (ont) été édité(s).",
   "Inf_NoFilesInBackupDir": "Il n'y a pas de fichiers dans le répertoire de sauvegarde!",
   "Inf_RestartRequired": "L'application doit être redémarrée après cette modification!",
