--- a/ChatManager/Properties/Resources.resx
+++ b/ChatManager/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="Chat_Layer" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Chat_Layer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="defaultChatColors" xml:space="preserve">
+    <value>b3ecff;ff7397;ff8022;a59ff3;eeee00;eeee00;B3ECFF;B3ECFF;B3ECFF;1d8cfe;82ec89;FF00FF;EFBC55;317A3C;eeee00;FF0000;eeee00;ff7f7f;EEEE00;EEEE00;EEEE00;eeee00;eeee00;eeee00;eeee00;eeee00;eeee00;eeee00;eeee00;FF5400;eeee00;eeee00;eeee00;A00000;C92E56;BB4FD2;1FAB29;FF6600;</value>
+  </data>
   <data name="Font" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Font.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
